src/test/deca/context/invalid/Objet/void_in_parameter.des
The type of an argument in the input of a function must not be Void